Mon May  5 19:03:27 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/Messenger.mpc:

          Added a StackSubscriber project w/ stack_subscriber.cpp, StackDataReaderListener.h, and 
          StackDataReaderListener.cpp

        * DevGuideExamples/DCPS/Messenger/StackDataReaderListener.h:
        * DevGuideExamples/DCPS/Messenger/StackDataReaderListener.cpp:

          The implementation for DataReaderListener that doesn't inherit from LocalObject<...>,
          so no reference counting is performed

        * DevGuideExamples/DCPS/Messenger/run_test.pl:

          Added code to run the stack based example when "stack" is passed to the perl script.

        * DevGuideExamples/DCPS/Messenger/stack_subscriber.cpp:

          Exactly the same code as subscriber.cpp, except that StackDataReaderListener is created on the stack.

        * DevGuideExamples/DCPS/Messenger/subscriber.cpp:

          Cleaned up unnecessary template parameter.

        * bin/dcps_tests.lst:

          Added new stack test.

Mon May  5 18:47:14 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/TransientLocalTest/README:

          Added PublisherImpl.cpp patch needed for reproducing the deadlock and
          testing the fix.

Mon May  5 14:38:27 UTC 2008  Jonathan Pollack  <pollack_j@ociweb.com>

        * tests/DCPS/TransientLocalTest/Writer.cpp:

          Fixed a no-EOL warning with this file.

Thu May  5 06:04:05 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:

          Fixed a deadlock situation that happens between fully_associated()
          thread and write()/register() thread when using
          TRANSIENT_LOCAL_DURABILITY_QOS. The two threads acquire writer
          container lock and publisher lock in reverse order. Making
          fully_associated() to acquire the write container lock before calling
          PublisherImpl::data_available() would resolve the deadlock.
